--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
 }
+ul {
+  padding: 0;
+}
+li {
+  list-style: none;
+}
 html,
 button {
   font-family: sans-serif;
@@ -30,19 +36,19 @@ button {
 body {
   background: #1d1e1f;
 }
-div {
-  border: 5px solid;
-  border-radius: 15px;
-}
+
 [class|='item'] {
-  height: 100px;
   color: orange;
   padding: 5px;
+  border: 5px solid;
+  border-radius: 15px;
 }
 [class|='wrap-list'] {
   color: dodgerblue;
   width: calc(100% / 3);
   padding: 15px;
+  border: 5px solid;
+  border-radius: 15px;
 }
 .wrapper {
   color: fuchsia;
