Implemented: html component app-tabs

--- a/new-template/css/style.css
+++ b/new-template/css/style.css
@@ -1,37 +1,19 @@
 @import url(https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap);
 @import url(https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css);
 
-.tiktok-sans-foo {
-  font-family: 'TikTok Sans', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  font-variation-settings: 'slnt' 0, 'wdth' 100;
-}
-.row {
-  font-size: 0;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.row > * {
-  display: inline-block;
-  font-size: 18px;
-  white-space: normal;
-  overflow: hidden;
-  vertical-align: top;
-  height: 100%;
-}
 * {
   box-sizing: border-box;
 }
+
 body {
   background: #1a1b1c;
   margin: 0;
 }
+a,
 html,
+input,
 button,
 select,
-input,
 textarea {
   color: #eaebec;
   font-size: 18px;
@@ -77,6 +59,28 @@ textarea:active {
 button {
   padding: 15px 50px;
 }
+
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  min-width: 500px;
+  padding: 15px;
+  border: 1px solid #2a2b2c;
+}
+.row {
+  font-size: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.row > * {
+  display: inline-block;
+  font-size: 18px;
+  white-space: normal;
+  overflow: hidden;
+  vertical-align: top;
+  height: 100%;
+}
+
 .app-bar {
   height: 80px;
   line-height: 80px;
@@ -86,11 +90,9 @@ button {
 .app-bar > div {
   padding: 0 10px;
 }
-
 .app-bar-title {
   font-size: 22px;
   font-weight: 800;
-  /* transform: rotate(45deg); */
 }
 .app-bar-menu {
   font-size: 32px;
@@ -99,42 +101,28 @@ button {
   position: absolute;
   right: 0;
   top: 0;
-  font-size: 26px;
-}
-main {
-  padding: 15px;
+  font-size: 32px;
 }
 
-.field-select {
+.field {
   padding: 5px;
 }
-.field-text {
-  padding: 5px;
-}
-.vert > input,
-.vert > textarea {
+.wide > * {
   width: 100%;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1200px;
-  min-width: 500px;
-  padding: 15px;
-  border: 1px solid #2a2b2c;
 }
 
 .list-posts {
   padding: 15px;
 }
-
 .item-post {
   padding: 15px;
   border-radius: 25px;
   margin-bottom: 15px;
   background: #111213;
 }
-
+.item-post .post-info {
+  padding: 10px;
+}
 .submit-post {
   margin: 0 auto;
   border-radius: 25px;
@@ -144,9 +132,22 @@ main {
   padding: 15px;
   box-shadow: 0 0 15px 0 #101112;
 }
-.wide button {
-  width: 100%;
-}
-.post-info {
-  padding: 10px;
+
+.app-tabs {
+  /* background-color: azure; */
+  a {
+    /* border: 1px solid #000; */
+    /* color: #101112; */
+    font-weight: 600;
+    /* padding: 0 25px; */
+    text-align: center;
+    line-height: 40px;
+    text-decoration: none;
+    width: calc(100% / 3);
+    /* transition: all 3s ease; */
+    background: #3a3b3c;
+  }
+  a:hover {
+    background: #414243;
+  }
 }
