--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,15 @@ button {
   padding: 15px;
   box-shadow: 0 0 15px 0 #101112;
 }
+.comment {
+  margin: 0 auto;
+  border-radius: 25px;
+  width: 60%;
+  min-width: 400px;
+  border: 1px solid #2a2b2c;
+  padding: 15px;
+  box-shadow: 0 0 15px 0 #101112;
+}
 
 .app-tabs {
   /* background-color: azure; */
